Fix bar menu z-index

--- a/laskyawm-bar.css
+++ b/laskyawm-bar.css
@@ -3,6 +3,7 @@
 	z-index: -1000;
 	position: absolute;
 	width: 100%;
+	height: 25px;
 }
 .barButton {
 	color: white;
@@ -11,6 +12,7 @@
 }
 #toggleApps {
 	margin: 3px 10px;
+	height: 19px;
 }
 #togglePowerMenu {
 	float: right;
